# coin-challenger

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md
Assets/Animations/: LoadedAnimationController.controller
Assets/Animations/Animations/: BlackMatterAppear.anim  BlackMatterIdle.anim  BlockDestroy.anim  CooperIdle.anim  DiamondIdle.anim  ErrorAnimation.anim  GoldIdle.anim  PlayerMoveDown.anim  PlayerMoveLeft.anim  PlayerMoveRight.anim  PlayerMoveUp.anim  SilverIdle.anim  Step.anim  appear_blackmatter_0.controller
Assets/Animations/Controllers/: BlackMatterAnimationController.controller  BlockDestroyAnimationController.controller  CooperAnimationController.controller  DiamondAnimationController.controller  GoldAnimationController.controller  PlayerAnimationController.controller  SilverAnimationController.controller
Assets/Prefabs/: BlackMatter.prefab  Cooper.prefab  Copper.prefab  Diamond.prefab  Gold.prefab  InGamePlayerInfo.prefab  LoadFailedPlayer.prefab  LoadedPlayer.prefab  Player.prefab  PlayerInfo.prefab  Ranker.prefab  Silver.prefab
Assets/Prefabs/Maps/: Block_Destroy.prefab  Map_12x10_play.prefab  (+10 more)
Assets/Scenes/: Entry.unity  Game.unity  Result.unity
Assets/Scripts/: GameInfoService.cs  GameManager.cs
Assets/StreamingAssets/Runners/Windows/CppHost/CppPlayer/: CMakeLists.txt  build.bat  build.sh
Assets/StreamingAssets/Runners/Windows/CppHost/CppPlayer/src/: CppPlayer.cpp  CppPlayer.h
Assets/TilePalettes/: Grounds.prefab
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
resources/: README.en.md
(+69 files in other folders)
